# trading

./: .env.example  .gitignore  PRODUCT_COMPLETION_CHECKLIST.md  README.md  SMALL_LIVE_VALIDATION_RUNBOOK.md  bootstrap_small_live_validation.cmd  bootstrap_small_live_validation.ps1  build_control_room_bundle.cmd  build_control_room_bundle.ps1  build_control_room_launcher_exe.cmd  build_control_room_launcher_exe.ps1  build_control_room_release_pack.cmd  build_control_room_release_pack.ps1  build_control_room_support_bundle.cmd  build_control_room_support_bundle.ps1  clean_control_room_bundle.cmd  clean_control_room_bundle.ps1  clean_control_room_launcher_exe.cmd  clean_control_room_launcher_exe.ps1  clean_control_room_release_pack.cmd  clean_control_room_release_pack.ps1  clean_control_room_support_bundle.cmd  clean_control_room_support_bundle.ps1  complete_remaining.cmd  complete_remaining.ps1  complete_remaining.sh  config.example.json  control_room_common.ps1  export_control_room_release_metadata.cmd  export_control_room_release_metadata.ps1  export_control_room_release_notes.cmd  export_control_room_release_notes.ps1  generate_small_live_validation_ppt.cmd  generate_small_live_validation_ppt.ps1  install_control_room_shortcuts.cmd  install_control_room_shortcuts.ps1  launch_control_room.cmd  launch_control_room.ps1  launch_control_room_hidden.cmd  launch_control_room_silent.vbs  (+37 more)
data/: demo_krw_btc_15m.csv  demo_krw_btc_240m.csv  operator-defaults.json
scripts/: bootstrap_small_live_validation_state.py  generate_small_live_validation_ppt.py  (+1 more)
tests/: test_backtest.py  (+17 more)
(+30 files in other folders)
